--- a/Proyecto/src/Interfaz/InicioSesionUsuario.form
+++ b/Proyecto/src/Interfaz/InicioSesionUsuario.form
@@ -38,8 +38,9 @@
                       <Component id="textContrasena" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="99" max="32767" attributes="0"/>
+              <EmptySpace pref="183" max="32767" attributes="0"/>
           </Group>
+          <Component id="Barrita" alignment="1" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -57,7 +58,9 @@
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <Component id="textContrasena" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="130" max="32767" attributes="0"/>
+              <EmptySpace pref="138" max="32767" attributes="0"/>
+              <Component id="Barrita" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -87,6 +90,8 @@
       <Events>
         <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textContrasenaKeyPressed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JProgressBar" name="Barrita">
     </Component>
   </SubComponents>
 </Form>
