--- a/Proyecto/src/Interfaz/catalogoMusica.form
+++ b/Proyecto/src/Interfaz/catalogoMusica.form
@@ -26,7 +26,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="164" max="-2" attributes="0"/>
               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="508" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="267" max="-2" attributes="0"/>
@@ -61,14 +61,14 @@
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="comboCategoria" pref="93" max="32767" attributes="0"/>
+                      <Component id="comboCategoria" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="textCantidad" pref="128" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="textNombredisco" alignment="0" pref="177" max="32767" attributes="0"/>
                           <Component id="textAutor" alignment="0" max="32767" attributes="0"/>
-                          <Component id="textNombredisco" alignment="0" max="32767" attributes="0"/>
+                          <Component id="textCantidad" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
