agrego menu item de Comprar de Musica

--- a/Proyecto/src/Interfaz/PrincipalUsuarios.form
+++ b/Proyecto/src/Interfaz/PrincipalUsuarios.form
@@ -20,6 +20,11 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="optInicioUsuarioActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Comprar Pelicula"/>
+              </Properties>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="optInicioSesion">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Buscar Pelicula"/>
